--- a/src/App.css
+++ b/src/App.css
@@ -110,15 +110,11 @@ body {
 /* ================= Home Page ===========================*/
 .hero-section {
   width: 100%;
-  background-color: whitesmoke;
-  height: 100vh;
-  display: flex;
+  /* background-color: whitesmoke; */
+  height: auto;
+  /* display: flex; */
 }
-.FirstSide-Section {
-  width: 50%;
-  padding-left: 150px;
-  padding-top: 230px;
-}
+
 
 .heading-1 {
   color: green;
@@ -182,17 +178,9 @@ body {
 /* ============================== RealTime Notification =============================*/
 
 .realtime-section {
-  padding: 5rem 8rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 10.5rem;
-  height: 80vh;
-  /* flex-direction: row-reverse; */
+
 }
-.firstSide-realtime {
-  flex: 1;
-}
+
 .head-icon {
   width: 60px;
   height: 60px;
@@ -240,25 +228,21 @@ body {
   font-weight: 400;
   color: #2c3655;
 }
-.SecondSide-realtime {
-  flex: 1;
-}
+
 .SecondSide-realtime img {
-  max-width: 100%;
+  width: 80%;
 }
 
 /* ============================== Billing =============================*/
-.Billing-section {
+/* .Billing-section {
   padding: 5rem 8rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 10.5rem;
   flex-direction: row-reverse;
-}
-.firstSide-realtime {
-  flex: 1;
-}
+} */
+
 .head-icon {
   width: 60px;
   height: 60px;
@@ -277,9 +261,7 @@ body {
   font-family: "jost";
   color: #0a1023;
   font-weight: 600;
-  text-transform: initial;
-  transition: all 0.3s;
-  -webkit-transition: all 0.3s;
+
 }
 .realtime-heading-3 {
   margin: 0;
@@ -320,50 +302,17 @@ body {
 
 /* ============================== Loan =============================*/
 
-.loan-section {
-  padding: 5rem 8rem;
-  height: 50vh;
-  background-color: blue;
-  display: flex;
-  /* gap: 15rem; */
-  flex-direction: row-reverse;
+.loan-btn-cta{
+  padding: 10px;
+  width: 300px;
+  background-color: skyblue;
+  color: black;
+  border: none !important;
+  /* color: ; */
 }
 
-.Loan-FirstSide {
-  flex: 3;
-}
-.loan-SecondSide {
-  flex: 3;
-}
-.loan-heading-2 {
-  padding-top: 50px;
-  font-size: 40px;
-  color: white;
-}
-.loan-heading-3 {
-  /* font-size: 20px; */
-  margin: 0;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 30px;
-  color: white;
-}
-.loan-btn-cta {
-  background: #5ac4ff;
-  box-shadow: 0px 12px 24px rgba(47, 65, 129, 0.1);
-  color: #0a1023;
-  padding: 20px 40px;
-  font-weight: 500;
-  text-align: center;
-  transition: 0.3s;
-  border-radius: 50px;
-  border: none;
-}
-.loan-btn-cta:hover {
-  border: 1px solid #5ac4ff;
-  background: transparent;
-  color: #ffffff;
-}
+
+
 
 /* ============================== Testimonial =============================*/
 .testimonial-section {
@@ -443,26 +392,14 @@ body {
 /* ================================================================= Last Section =================================================================*/
 
 .lastsection {
-  margin-top: 20px;
-  flex-direction: row-reverse;
-  display: flex;
-  border-radius: 50px;
-  justify-content: center;
-  gap: 10rem;
-  height: 40vh;
-  align-items: center;
+ width: 100%;
+  height: auto;
   background-color: blue;
 }
 .first-sec-last {
   width: 300px;
 }
-.first-sec-last img {
-  position: absolute;
-  bottom: -3220px;
-  right: 20;
-  max-width: 100%;
-  /* height: auto; */
-}
+
 .last-sect-title-1 {
   font-weight: 700;
   margin-bottom: 16px;
